--- a/style.css
+++ b/style.css
@@ -18,8 +18,17 @@ img{
 }
 
 table{
+    background-color: white;
     border: 1px solid black;
-    border-collapse: separate;
+    border-collapse: collapse;
+    width: 90%;
+    margin: 0px auto;
+}
+
+td{
+    border: 1px solid black;
+    border-right: 0px;
+    border-left: 0px;
 }
 
 input, select{
