--- a/style.css
+++ b/style.css
@@ -1,20 +1,61 @@
-body{
-    background-color: rgb(203, 208, 255);
-}
-
 h1{
     text-align: center;
 }
 
-div{
-    width: 60%;
-    margin-left: 20%;
-    background-color: rgb(138, 255, 125);
+#div{
+    width: 100%;
+    background-color: white;
+    display:flex;
+    flex-direction: row;
+    margin-top: 8%;
+    padding-left: 14%;
+}
+
+#mensaje{
+    padding-right: 3%;
+    text-align: center;
+}
+
+#login{
+    margin-left: 6%;
+    background-color: rgb(136, 110, 142);
+    width: 30%;
+    padding: 3% 6% 1% 6%;
+    border-radius: 8%/12%;
+    color: white
+    padd
+}
+
+#login input, label, button, p{
+    font-family: "Raleway", sans-serif;
+    font-size: 18pt;
+    font-weight: 500;
+}
+
+#login input{
+    margin-top: 4px;
+    margin-bottom: 4%;
+    width: 88%;
+    height: 40px;
+    border-radius: 4%/35%;
+    border: 0px;
+    background-color: rgb(213, 213, 213);
+    padding: 0px 5%;
+    font-size: 14pt;
+    font-weight: 300;
+}
+
+#login button{
+    background-color: rgb(106, 49, 158);
+    color:white;
+    padding: 2% 15%;
+    margin-left: 13%;
+    margin-top: 8%;
 }
 
 img{
-    width: 40%;
-    margin-left: 30%;
+    margin-top: 14%;
+    width: 100%;
 }
 
 table{
@@ -32,19 +73,7 @@ td{
 }
 
 input, select{
-    width: 50%;
+    width: 80%;
     height: 20px;
     margin-top: 15px;
-}
-
-.titulo{
-    background-color: lightgray;
-    padding: 2px;
-    padding-left: 6px;
-    border: 2px solid gray;
-}
-
-form{
-    text-align: right;
-    padding-right: 25%;
 }
