--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
+body{
+    background-color: rgb(223, 215, 243);
+    margin: 0px;
+}
+
 h1{
     text-align: center;
+    font-family: "Raleway",sans-serif;
+    margin: 40px 0px;
 }
 
 #div{
     width: 100%;
-    background-color: white;
+    background-color: rgb(223, 215, 243);
     display:flex;
     flex-direction: row;
     margin-top: 8%;
@@ -12,6 +19,21 @@ h1{
 }
 
 #mensaje{
+    visibility: hidden;
+    margin-top: 40px;
+    z-index: 10;
+    text-align: center;
+    color: white;
+    font-size: 18pt;
+    font-weight: 400;
+    padding: 12px 0px;
+    width: 98%;
+    font-family: "Raleway",sans-serif;
+    position: fixed;
+    background-color: rgb(203, 0, 0);
+}
+
+#bienvenido{
     padding-right: 3%;
     text-align: center;
 }
@@ -23,10 +45,9 @@ h1{
     padding: 3% 6% 1% 6%;
     border-radius: 8%/12%;
     color: white
-    padd
 }
 
-#login input, label, button, p{
+input, label, button, p{
     font-family: "Raleway", sans-serif;
     font-size: 18pt;
     font-weight: 500;
@@ -45,12 +66,18 @@ h1{
     font-weight: 300;
 }
 
-#login button{
+button{
+    width: 300px;
     background-color: rgb(106, 49, 158);
     color:white;
-    padding: 2% 15%;
+    padding: 10px 0px;
+    border-radius: 3%/20%;
+}
+
+#login button{
     margin-left: 13%;
     margin-top: 8%;
+    padding: 2% 15%;
 }
 
 img{
@@ -64,16 +91,118 @@ table{
     border-collapse: collapse;
     width: 90%;
     margin: 0px auto;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.encabezados{
+    color: rgb(255, 255, 255);
+    background-color: rgb(124, 33, 181);
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 16pt;
+    font-weight: 100;
+    letter-spacing: 2px;
 }
 
 td{
-    border: 1px solid black;
-    border-right: 0px;
-    border-left: 0px;
+    border: 1px solid rgb(172, 172, 172);
+    color: rgb(103, 103, 103);
+    padding: 10px 1.5%;
 }
 
 input, select{
     width: 80%;
     height: 20px;
     margin-top: 15px;
+}
+
+.titulo{
+    background-color: black;
+    padding: 10px 0px;
+}
+
+.titulo p{
+    margin: 0px;
+    font-size: 30pt;
+    color: white;
+    text-align: center;
+    letter-spacing: 20px;
+    font-weight: 100;
+}
+
+#subtitulos{
+    background-color: white;
+    display: flex;
+    position: static;
+    height: 43px;
+    margin-bottom: 70px;
+}
+
+#subtitulos p, a {
+    margin: 0px;
+    font-family: "Raleway", sans-serif;
+    font-size: 15pt;
+    text-decoration: none;
+    color: white;
+}
+
+#agregarUsuario{
+    background-color: rgb(106, 49, 158);
+    padding: 10px 20px;
+    z-index: 1;
+    border-radius: 7%/30%;
+}
+
+#usuarioActual{
+    display: flex;
+    background-color: rgb(56, 30, 87);
+    position: absolute;
+    width: 100%;
+}
+
+#usuarioActual p{
+    padding: 10px;
+    width: 86.5%;
+    text-align: right;
+}
+
+
+#usuarioActual a {
+    padding: 10px 20px;
+    background-color: red;
+    border-radius: 7%/30%;
+}
+
+#divBotones{
+    margin: 50px 0px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.botonMargen{
+    margin-left: 100px;
+}
+
+#formUsuario{
+    margin-left: 22%;
+    text-align: right;
+width: 50%;
+}
+
+#formUsuario > input, #formUsuario > select{
+    width: 54%;
+    margin-top: 4px;
+    margin-bottom: 4%;
+    height: 40px;
+    border-radius: 3%/35%;
+    border: 0px;
+    background-color: rgb(208, 160, 234);
+    padding: 0px 5%;
+    font-size: 14pt;
+    font-weight: 300;
+}
+
+#formUsuario > select{
+    width: 64%;
 }
